--- a/AnIceAndFire/app/src/main/res/values/strings.xml
+++ b/AnIceAndFire/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="error_net_unavailable">Интернет недоступен. Попробуйте позже.</string>
     <string name="error_no_houses_downloaded">Нет загруженных домов.</string>
     <string name="houses_get_info_message">Синхронизация данных …</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
